<resources>
    <string name="app_name">Angle</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contentDescription">TODO</string>
    <string name="btnReadNews">Читать</string>
    <string name="textCloseBtn">x</string>
    <string name="btnShowEventsMap">Показать карту</string>
    <string name="all">TODO</string>

    <!-- Update -->
    <string name="update1">• Обновлен дизайн раздела «Новости»;</string>
    <string name="update2">• Переименован раздел «Галерея» в «Медиа»;</string>
    <string name="update3">• Обновлен функционал и дизайн раздела «Медиа»;</string>
    <string name="update4">• В раздел «Медиа» добавлена функция поиска по тегам: имя, фамилия, локация и т.д.;</string>
    <string name="update5">• Исправлены ошибки и улучшена работа приложения.</string>

    <string name="btnText">OK</string>
    <string name="btnCancel">Закрыть</string>
    <string name="btnGo">Перейти</string>
    <string name="title1Column">Этап</string>
    <string name="title2Column">Квал.</string>
    <string name="title3Column">Парные</string>
    <string name="title4Column">Итог</string>
    <string name="title1Row">1 этап</string>
    <string name="title2Row">2 этап</string>
    <string name="title3Row">3 этап</string>
    <string name="title4Row">4 этап</string>
    <string name="title5Row">5 этап</string>

    <string name="titleMenuNews">Новости</string>
    <string name="titleMenuEvents">Календарь</string>
    <string name="titleMenuResults">Результаты</string>
    <string name="titleMenuMedia">Медиа</string>
    <string name="titleMenuPilots">Пилоты</string>

    <string name="titleResults">Результат в чемпионате РБ</string>
    <string name="titleDescriptionPilots">Описание</string>
    <string name="viewInMap">Просмотр на карте</string>
    <string name="titleTicket">Билеты</string>
    <string name="ticketproBy">ticketpro.by</string>
    <string name="schemaEventsTitle">Схема мероприятия</string>
    <string name="ListRegPilotsTitle">Список предварительно зарегистрированных пилотов</string>
    <string name="judgesTask">Судейское задание</string>
    <string name="resultsEventsTitle">Результаты этапа</string>
    <string name="qualificationTitle">Квалификация</string>
    <string name="gridTitle">Сетка</string>
    <string name="todo">TODO</string>
    <string name="textHintMediaSearch">Введите имя, фамилию, локацию и т.д.</string>
</resources>