<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/news"
        android:icon="@drawable/ic_news"
        android:orderInCategory="1"
        android:title="@string/titleMenuNews" />
    <item
        android:id="@+id/calendar"
        android:icon="@drawable/ic_calendar"
        android:orderInCategory="2"
        android:title="@string/titleMenuEvents" />

    <item
        android:id="@+id/results"
        android:icon="@drawable/ic_results"
        android:orderInCategory="3"
        android:title="@string/titleMenuResults" />

    <item
        android:id="@+id/media"
        android:icon="@drawable/ic_media"
        android:orderInCategory="4"
        android:title="@string/titleMenuMedia" />
    <item
        android:id="@+id/pilots"
        android:icon="@drawable/ic_pilots"
        android:orderInCategory="5"
        android:title="@string/titleMenuPilots" />
</menu>