<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintCircleRadius="100dp"
    android:background="@drawable/btn_read_news">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleDialogTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:textColor="@color/lightRed"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/updTV1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update1" />

        <TextView
            android:id="@+id/updTV2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update2" />

        <TextView
            android:id="@+id/updTV3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update3" />

        <TextView
            android:id="@+id/updTV4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update4" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/btn_ok_update"
                android:layout_marginVertical="15dp"
                android:layout_marginEnd="2dp"
                android:text="@string/btnText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>